--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -396,8 +396,8 @@
                 <div>
                     <h4 class="modal-title modeltitle">下载文件列表</h4>
                 </div>
-                <div style="position: absolute;right: 25px;top: 14px">
-                    <a href="javascript:reportFiledown()"><span></span>查看全部</a>
+                <div style="position: absolute;right: 25px;top: 14px;">
+                    <a href="javascript:reportFiledown()"  style='text-decoration: underline;color: #3c8dbc'><span></span>查看全部</a>
                 </div>
                 <div class="div1" id="head_tr">
 
