--- a/WebContent/crm/searchData_view.html
+++ b/WebContent/crm/searchData_view.html
@@ -572,9 +572,15 @@
                 <div class="form-group col-lg-2 pull-right" style="padding-top: 25px;">
                     <button type="button" onclick="resetSerachParam(2)" style="border-color:#00a65a;background-color:#00a652" class="btn btn-block btn-primary">重置</button>
                 </div>
-                <div class="col-lg-2 pull-right" style="padding-top: 25px;" id="exportnormal">
-                    <button type="button" id="export_manual_massOrder_button" class="btn btn-block btn-warning dialog_open">导出</button>
+                <div class="col-lg-2 pull-right" style="padding-top: 25px;z-index: 1000;position: relative">
+                    <div id="exportnormal" >
+                        <button type="button" id="export_manual_massOrder_button" class="btn btn-block btn-warning dialog_open">导出</button>
+                        <span id="forcolumnattention1" style="color:#47b8ef;font-size: 14px;white-space: nowrap;position: absolute;top:1px;z-index: 1000;display:none;left:17px">请确认是否已经查询到数据！</span>
+                    </div>
+                    <div id="div" style="z-index:10000;position: absolute;top: 25px;display: block"></div>
+
                 </div>
+
                 <div class="col-lg-2 pull-right" style="padding-top: 25px;display:none" id="exportall">
                     <button type="button" id="export_manual_massOrder_button" onclick="export_manual_massOrder('all')" class="btn btn-block btn-warning">完整数据导出</button>
                 </div>
@@ -710,6 +716,15 @@ Date.prototype.format=function(fmt) {
 	var tag = decode64(getUrlParamByKey("tag"));//订单标签
 	
   $(function () {
+      var export_button = document.getElementById("export_manual_massOrder_button");
+      var height = export_button.clientHeight;
+      var width = export_button.clientWidth;
+      var div = document.getElementById("div");
+      $("#div").css("height",height+"px");
+      $("#div").css("width",width+"px");
+      $(".btn-warning").css("background-color","#666");
+      $(".btn-warning").css("border-color","#666");
+      document.getElementById("export_manual_massOrder_button").setAttribute("disabled", true);
     $(".logo-lg > ul > li").mouseenter(function(){
       $(this).children(".nav_dropdown").show();
     });
@@ -1477,6 +1492,28 @@ Date.prototype.format=function(fmt) {
   		isCreatePage=false;
   		search_manual_abnormalOrder1(cur_page);
         $('#search_manual_massOrder_button').removeAttr("disabled");
+
+       var total = $("#totalRecord_cannot").text();
+       if(total != "" && total != 0 ){
+           var div = document.getElementById("div");
+           div.style.display = "none";
+           $(".btn-warning").css("background-color","#f39c12");
+           $(".btn-warning").css("border-color","#e08e0b");
+           $('#export_manual_massOrder_button').removeAttr("disabled");
+
+       }else{
+           var export_button = document.getElementById("export_manual_massOrder_button");
+           var height = export_button.clientHeight;
+           var width = export_button.clientWidth;
+           var div = document.getElementById("div");
+           div.style.display = "block";
+           $("#div").css("height",height+"px");
+           $("#div").css("width",width+"px");
+           $(".btn-warning").css("background-color","#666");
+           $(".btn-warning").css("border-color","#666");
+           document.getElementById("export_manual_massOrder_button").setAttribute("disabled", true);
+       }
+
    }
   
   //查询上
@@ -2544,6 +2581,13 @@ function reportFiledown(){
 
     window.open(url,"filedown_list");
 }
+
+$("#div").on("mouseover",function(event){
+    $("#forcolumnattention1").show();
+});
+$("#div").on("mouseout",function(event){
+    $("#forcolumnattention1").hide();
+});
 
 //打开按钮"模态框"
 $(".dialog_open").click(function(){
